# otherside

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  otherside.sln
FFTs/: FFTs.vcxproj  ffts_main.cpp
SpecParser/: Program.cs  SpecParser.csproj
SpecParser/Properties/: AssemblyInfo.cs
data/: Test_Loop.cpp  Test_Loop.frag.spv  Test_Loop.spv  complex.cpp  complex.frag.cpp  complex.frag.spv  light.frag  light.frag.cpp  light.frag.spv  light.frag.txt  sampler.frag  sampler.frag.cpp  sampler.frag.spv
src/: codegen.cpp  codegen.h  interpreted_vm.cpp  interpreted_vm.h  lookups.h  lookups_gen.cpp  lookups_gen.h  otherside.vcxproj  otherside_main.cpp  parser.cpp  parser.h  parser_definitions.h  types.h  vm.h
src/Khronos/: spirv.h
src/data/: Test_Loop.cpp  Test_Loop.glsl  complex.frag  complex.frag.cpp  complex.frag.spv  complex.frag.test  complex.glsl  sample.frag.cpp  sample.frag.spv  sampler.frag  sampler.frag.cpp  sampler.frag.spv
src/ext/: CMakeLists.txt
src/ext/glsl.std.450/: CMakeLists.txt  glsl.std.450.cpp  glsl.std.450.vcxproj
src/main/: CMakeLists.txt  codegen.cpp  codegen.h  interpreted_vm.cpp  interpreted_vm.h  lookups.cpp  lookups.h  otherside.vcxproj  otherside_main.cpp  parser.cpp  parser.h  validation.cpp  validation.h
src/shared/: CMakeLists.txt  common_ops.h  lookups.cpp  lookups.h  lookups_gen.cpp  lookups_gen.h  otherside_shared.vcxproj  parser_definitions.h  types.h  utils.cpp  utils.h  vm.h
src/shared/Khronos/: GLSL450Lib.h  spirv.h
src/test/: CMakeLists.txt  otherside_test_codegen.cpp  otherside_test_parser.cpp
src/tools/: CMakeLists.txt
src/tools/SpecParser/: Program.cs  SpecParser.csproj  packages.config
src/tools/assembler/: CMakeLists.txt  assembler_main.cpp
src/tools/disassembler/: CMakeLists.txt  disassembler_main.cpp
tools/SpecParser/: SpecParser.csproj
